# energia

./: .gitignore  Dockerfile  Pipfile  README.md  app.py  forms.py  models.py  pyproject.toml  requirementes.txt  requirements.txt  run.py  settings.py
static/css/: login.css  login.min.css
static/js/: energia.js  energia.min.js
templates/: index.html  login.html
