[tool.poetry]
name = "energia"
version = "0.1.0"
description = "Energia"
authors = ["Israel P. da Silva <israel4p@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.0"
passlib = "^1.7.4"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
